--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=toca-cms
+
+spring.datasource.url=jdbc:mysql://localhost:3306/atdo_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+# spring.jpa.generate-ddl=true
+# spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
